made things do things

--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@
 	          <p>If you think I'm <i>really</i> cool, <a href="https://venmo.com/code?user_id=2617090229927936954&amp;created=1650387497" class="text-white">buy me a coffee</a>.</p>
         </footer>
     </div>
-
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+      
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
     <script type="text/javascript" src="click.js"></script>
 </body>
