stop and start test

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 	          </div>
         </header>
         <main class="px-3">
-            <form>
-                <label>Srg. Button</label><br>
-                <input type="button" value="!Attention!">click me!</input>
-            </form>
+            <div w-100 h-100>
+                <form>
+                    <label>click to begin the test, press <kbd>Space</kbd> along to the beat</label><br>
+                    <input type="button" value="Start"></input>
+                </form>
+            </div>
         </main>
 
         <footer class="mt-auto text-white-50">
