a terribly unorganized commit :)

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <main class="px-3">
             <div w-100 h-100>
                 <form>
-                    <label>click to begin the test, press <kbd>Space</kbd> along to the beat</label><br>
-                    <input type="button" value="Start"></input>
+                    <label>click to begin the test, press <kbd>D</kbd> along to the beat</label><br>
+                    <input id="testBtn" type="button" value="Start"></input>
                 </form>
             </div>
         </main>
